--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <main>
-        <section id="Login">
+        <section id="login">
             <div id="imagem">
-                <img src="" alt="">
+                <!--Aqui vem a imagem na css-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
